<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="false"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        style="@style/border">

        <EditText
            android:id="@+id/animal_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/animal"
            style="@style/space"/>

        <EditText
            android:id="@+id/animal_legs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/legs"
            style="@style/space"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            style="@style/space">

            <CheckBox
                android:id="@+id/fur"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/space"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fur"
                style="@style/space"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/additional_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/info"
                style="@style/space"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/home"
                android:gravity="center"
                style="@style/space"/>

            <Spinner
                android:id="@+id/animal_habitat"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                style="@style/space"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="24dp"
                android:gravity="center"
                android:text="@string/click"
                android:textAllCaps="true"
                android:background="@color/colorAccent"
                style="@style/space"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <Button
                    android:id="@+id/cat_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:onClick="CatFace"
                    android:background="@drawable/download" />
            </LinearLayout>


        </LinearLayout>


    </LinearLayout>
</ScrollView>